# orbvis

./: LICENSE  README.md  dosconfig.txt  orbmd.ipynb  paper.bib  paper.md  pyproject.toml  sample_bandconfig.txt  sample_config.txt  sample_dosconfig.txt
.github/workflows/: draft-pdf.yml
Examples/MoS2_ispin1_hse/: Sp_Mod_MoS2_isp1_band.txt
Examples/WS2_ispin2_hse/: WS2_isp2_dos_test.txt
examples/Bi2Se3_SOC/: INCAR  KPOINTS  POSCAR  bi_se_p_bsconfig.txt
examples/MoS2_ispin1_hse/: DOSCAR  EIGENVAL  KPOINTS  MoS2_isp1_hse_dos.txt  Mo_d_isp1_band.txt
examples/Si_ispin1_pbe/: DOSCAR  INCAR  KPOINTS  POSCAR  si_bs_config.txt
examples/WS2_ispin2_hse/: KPOINTS  WS2_d_isp2.txt
orbvis/: __init__.py  dosconfig.txt  main.py  maintest.py  sample_config.txt
orbvis/Examples/MoS2_ispin1_hse/.ipynb_checkpoints/: PROCAR-checkpoint
orbvis/Examples/WS2_ispin1_pbe/: DOSCAR  EIGENVAL  PROCAR
orbvis/Examples/WS2_ispin2_hse/: DOSCAR  EIGENVAL  PROCAR
orbvis/Examples/WS2_ispin2_pbe/: DOSCAR  EIGENVAL
orbvis/Examples/WS2_ispin2_pbe/.ipynb_checkpoints/: PROCAR-checkpoint
orbvis/band/: __init__.py  parser.py  plotter.ipynb  plotter.py  plotter_new.py  plotter_old.py  utils.py  vaspstyleparser.ipynb  vaspstyleparser1.ipynb
orbvis/dos/: __init__.py  parser.py  plotter.py  utils.py
