[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Orbvis"
version = "0.1.0"
description = "A python package to vizualize orbital-resolved band structure and DOS"
authors = [{name = "Taradutt Pattnaik", email = "taradutt.pattnaik@uconn.edu"}]
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "distinctipy>=1.3",
  "matplotlib>=3.6"
]

[project.scripts]
orbvis = "orbvis.main:main"