[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbvis"
version = "1.0.2"
description = "A python package to vizualize orbital-resolved band structure and DOS"
readme = "README.md"
authors = [{name = "Taradutt Pattnaik"}]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "distinctipy>=1.3",
  "matplotlib>=3.6"
]

[project.scripts]
orbvis = "orbvis.main:main"

[project.urls]
Repository = "https://github.com/staradutt/orbvis"
Documentation = "https://github.com/staradutt/orbvis/tree/main/docs"
Examples = "https://github.com/staradutt/orbvis/tree/main/examples"
Issues = "https://github.com/staradutt/orbvis/issues"
